Fixed alignment of follow button in channel heading

--- a/core/app/assets/stylesheets/channels/topbar.css.less
+++ b/core/app/assets/stylesheets/channels/topbar.css.less
@@ -28,7 +28,7 @@
 
     .btn {
       font-size: 11px;
-      margin-top: -2px;
+      margin-top: 1px;
     }
 
     div.add-to-channel-region {
